runtime/molt-cpython-abi/include/Python.h

/* ── Primitive types ──────────────────────────────────────────────────────── */

typedef intptr_t Py_ssize_t;
extern PyObject    *PyObject_CallMethodObjArgs(PyObject *callable, PyObject *name, ...);
extern PyObject    *PyObject_CallMethod(PyObject *callable, const char *name, const char *format, ...);
extern PyObject    *PyObject_CallFunction(PyObject *callable, const char *format, ...);
extern PyObject    *PyObject_CallFunctionObjArgs(PyObject *callable, ...);
extern PyObject    *PyUnicode_FromFormat          (const char *format, ...);
extern PyObject    *PyUnicode_FromFormatV         (const char *format, va_list vargs);
extern PyObject   *PyTuple_Pack    (Py_ssize_t n, ...);
extern PyObject *PyErr_Format     (PyObject *exc_type, const char *format, ...);
extern int       PyErr_WarnFormat(PyObject *category, Py_ssize_t stack_level, const char *format, ...);
extern PyObject *PyErr_FormatV   (PyObject *exc_type, const char *format, va_list vargs);
extern void      PyErr_FormatUnraisable(const char *format, ...);
extern void      PySys_WriteStderr     (const char *format, ...);
extern PyObject *Py_BuildValue(const char *format, ...);
extern PyObject *_Py_BuildValue_SizeT(const char *format, ...);
extern PyObject *Py_VaBuildValue(const char *format, va_list vargs);
/* Argument parsing (variadic — implemented in C shim) */
extern int PyArg_ParseTuple             (PyObject *args, const char *format, ...);
extern int PyArg_ParseTupleAndKeywords  (PyObject *args, PyObject *kwds,
                                         const char *format, char **kwlist, ...);
extern int PyArg_VaParseTupleAndKeywords(PyObject *args, PyObject *kwds,
                                         const char *format, char **kwlist, va_list vargs);
extern int PyArg_UnpackTuple            (PyObject *args, const char *name,
                                         Py_ssize_t min, Py_ssize_t max, ...);
extern int PyOS_snprintf(char *str, size_t size, const char *format, ...);
extern int PyOS_vsnprintf(char *str, size_t size, const char *format, va_list va);
extern double PyOS_string_to_double(const char *str, char **endptr, PyObject *overflow_exception);
extern long PyOS_strtol(const char *str, char **endptr, int base);
extern unsigned long PyOS_strtoul(const char *str, char **endptr, int base);